--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -46,7 +46,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_brightness"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grayscale_15"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_appearance_description"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -96,7 +96,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_performance"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grayscale_15"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_performance_description"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -146,7 +146,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_sensitivity"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grayscale_15"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_sensitivity_description"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -196,7 +196,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_timeout"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grayscale_15"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_timeout_description"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -246,7 +246,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_night"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grayscale_15"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_night_description"
                     app:layout_constraintEnd_toEndOf="parent"
