--- a/app/src/main/res/layout/fragment_settings_sensitivity_card.xml
+++ b/app/src/main/res/layout/fragment_settings_sensitivity_card.xml
@@ -5,7 +5,7 @@
     android:id="@+id/settings_sensitivity_card_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray_2">
+    android:background="@color/grayscale_2">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/settings_sensitivity_card_top_container"
@@ -24,6 +24,7 @@
             android:layout_marginEnd="48dp"
             android:layout_marginRight="48dp"
             android:text="@string/settings_sensitivity"
+            android:textColor="@android:color/white"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,20 +69,27 @@
             android:padding="6dp">
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/settings_sensitivity_card_start_indicator_value_start"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Detect action"
-                app:layout_constraintBottom_toTopOf="@+id/settings_sensitivity_card_start_indicator_progress"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/settings_sensitivity_card_start_indicator_progress" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/settings_sensitivity_card_start_indicator_value_middle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Activate action"
-                app:layout_constraintBottom_toTopOf="@+id/settings_sensitivity_card_start_indicator_progress"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/settings_sensitivity_card_start_indicator_progress" />
+
+            <TextView
+                android:id="@+id/settings_sensitivity_card_start_indicator_value_end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/settings_sensitivity_card_start_indicator_progress" />
 
             <ProgressBar
                 android:id="@+id/settings_sensitivity_card_start_indicator_progress"
@@ -90,7 +98,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="1dp"
                 android:layout_marginRight="1dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/settings_sensitivity_card_end_indicator_progress"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -102,20 +109,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="1dp"
                 android:layout_marginLeft="1dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/settings_sensitivity_card_start_indicator_progress"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Start"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/settings_sensitivity_card_start_indicator_progress" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
