--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,7 @@
     android:id="@+id/settings_rootview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/grayscale_0"
     android:fitsSystemWindows="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -114,7 +114,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="bottom"
                                     android:text="@string/app_name"
-                                    android:textColor="@color/white"
+                                    android:textColor="@color/grayscale_15"
                                     android:textSize="24sp"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -151,7 +151,7 @@
             android:id="@+id/settings_main_viewblock"
             android:layout_width="0dp"
             android:layout_height="24dp"
-            android:background="@color/black"
+            android:background="@color/grayscale_0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -183,7 +183,7 @@
                 android:layout_marginRight="48dp"
                 android:gravity="center"
                 android:text="@string/button_settings"
-                android:textColor="@color/white"
+                android:textColor="@color/grayscale_15"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
