--- a/app/src/main/res/layout/fragment_settings_performance_card.xml
+++ b/app/src/main/res/layout/fragment_settings_performance_card.xml
@@ -32,10 +32,11 @@
         android:id="@+id/settings_performance_card_bottom_shader"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@drawable/bg_bottom_gradient"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/settings_performance_card_info" />
+        app:layout_constraintTop_toTopOf="@+id/settings_performance_card_text_container" />
 
     <TextView
         android:id="@+id/settings_performance_card_title"
@@ -47,19 +48,44 @@
         android:layout_marginRight="48dp"
         android:gravity="center"
         android:text="@string/settings_performance"
-        android:textColor="@color/white"
+        android:textColor="@color/grayscale_15"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/settings_performance_card_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="16sp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/settings_performance_card_text_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/settings_performance_main_image_quality_desc"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/settings_performance_image_quality_level_hint"
+            android:textColor="@color/grayscale_15"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/settings_performance_card_info"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/settings_performance_main_image_quality_seekbar" />
+
+        <TextView
+            android:id="@+id/settings_performance_card_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
