--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -3,15 +3,15 @@
 
     <style name="Theme.AmbientGallery" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/grayscale_0</item>
+        <item name="colorPrimaryVariant">@color/grayscale_0</item>
+        <item name="colorOnPrimary">@color/grayscale_15</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/white</item>
-        <item name="colorSecondaryVariant">@color/white</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/grayscale_15</item>
+        <item name="colorSecondaryVariant">@color/grayscale_15</item>
+        <item name="colorOnSecondary">@color/grayscale_0</item>
         <!-- Customize your theme here. -->
-        <item name="android:statusBarColor">@color/black</item>
-        <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:statusBarColor">@color/grayscale_0</item>
+        <item name="android:navigationBarColor">@color/grayscale_0</item>
     </style>
 </resources>
