--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="gray_1">#FF111111</color>
-    <color name="gray_2">#FF222222</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="grayscale_0">#000000</color>
+    <color name="grayscale_1">#111111</color>
+    <color name="grayscale_2">#222222</color>
+    <color name="grayscale_15">#FFFFFF</color>
     <color name="transparent">#00000000</color>
+    <color name="blue_main_dark">#090E17</color>
+    <color name="blue_main_light">#293D66</color>
 </resources>
