--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,13 +2,13 @@
     <!-- Base application theme. -->
     <style name="Theme.AmbientGallery" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/grayscale_0</item>
+        <item name="colorPrimaryVariant">@color/grayscale_0</item>
+        <item name="colorOnPrimary">@color/grayscale_15</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/white</item>
-        <item name="colorSecondaryVariant">@color/white</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/grayscale_15</item>
+        <item name="colorSecondaryVariant">@color/grayscale_15</item>
+        <item name="colorOnSecondary">@color/grayscale_0</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
