--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -38,7 +38,7 @@
                     android:id="@+id/settings_main_card"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/bg_round_g2_24"
+                    android:background="@drawable/bg_round_g1_24"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
@@ -114,8 +114,8 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="bottom"
                                     android:text="@string/app_name"
-                                    android:textColor="@color/grayscale_15"
-                                    android:textSize="24sp"
+                                    android:textColor="@color/main_color"
+                                    android:textSize="@dimen/text_size_title"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent" />
@@ -125,6 +125,8 @@
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:text="description of app"
+                                    android:textColor="@color/sub_color"
+                                    android:textSize="@dimen/text_size_tiny"
                                     app:autoSizeTextType="uniform"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -160,7 +162,7 @@
             android:id="@+id/settings_main_titlebar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_round_g2_24"
+            android:background="@drawable/bg_round_g1_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -183,8 +185,8 @@
                 android:layout_marginRight="48dp"
                 android:gravity="center"
                 android:text="@string/button_settings"
-                android:textColor="@color/grayscale_15"
-                android:textSize="24sp"
+                android:textColor="@color/main_color"
+                android:textSize="@dimen/text_size_title"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/settings_button_back"
