--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -46,8 +46,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_brightness"
-                    android:textColor="@color/grayscale_15"
-                    android:textSize="24sp"
+                    android:textColor="@color/main_color"
+                    android:textSize="@dimen/text_size_normal"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_appearance_description"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_brightness_desc"
-                    android:textSize="14sp"
+                    android:textColor="@color/sub_color"
+                    android:textSize="@dimen/text_size_tiny"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -96,8 +97,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_performance"
-                    android:textColor="@color/grayscale_15"
-                    android:textSize="24sp"
+                    android:textColor="@color/main_color"
+                    android:textSize="@dimen/text_size_normal"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_performance_description"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +109,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_performance_desc"
-                    android:textSize="14sp"
+                    android:textColor="@color/sub_color"
+                    android:textSize="@dimen/text_size_tiny"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -146,8 +148,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_sensitivity"
-                    android:textColor="@color/grayscale_15"
-                    android:textSize="24sp"
+                    android:textColor="@color/main_color"
+                    android:textSize="@dimen/text_size_normal"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_sensitivity_description"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -158,7 +160,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_sensitivity_desc"
-                    android:textSize="14sp"
+                    android:textColor="@color/sub_color"
+                    android:textSize="@dimen/text_size_tiny"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -196,8 +199,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_timeout"
-                    android:textColor="@color/grayscale_15"
-                    android:textSize="24sp"
+                    android:textColor="@color/main_color"
+                    android:textSize="@dimen/text_size_normal"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_timeout_description"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -208,7 +211,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_timeout_desc"
-                    android:textSize="14sp"
+                    android:textColor="@color/sub_color"
+                    android:textSize="@dimen/text_size_tiny"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -246,8 +250,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_night"
-                    android:textColor="@color/grayscale_15"
-                    android:textSize="24sp"
+                    android:textColor="@color/main_color"
+                    android:textSize="@dimen/text_size_normal"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_night_description"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -258,7 +262,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_night_desc"
-                    android:textSize="14sp"
+                    android:textColor="@color/sub_color"
+                    android:textSize="@dimen/text_size_tiny"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
