--- a/app/src/main/res/layout/fragment_settings_performance_card.xml
+++ b/app/src/main/res/layout/fragment_settings_performance_card.xml
@@ -48,8 +48,8 @@
         android:layout_marginRight="48dp"
         android:gravity="center"
         android:text="@string/settings_performance"
-        android:textColor="@color/grayscale_15"
-        android:textSize="24sp"
+        android:textColor="@color/main_color"
+        android:textSize="@dimen/text_size_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -72,8 +72,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/settings_performance_image_quality_level_hint"
-            android:textColor="@color/grayscale_15"
-            android:textSize="16sp"
+            android:textColor="@color/main_color"
+            android:textSize="@dimen/text_size_small"
             app:layout_constraintBottom_toTopOf="@+id/settings_performance_card_info"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -84,6 +84,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:textColor="@color/sub_color"
+            android:textSize="@dimen/text_size_tiny"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
