--- a/app/src/main/res/drawable/ic_launcher_background_round.xml
+++ b/app/src/main/res/drawable/ic_launcher_background_round.xml
@@ -14,10 +14,10 @@
                 android:endX="0"
                 android:type="linear">
                 <item
-                    android:color="#090E17"
+                    android:color="#081018"
                     android:offset="0.0" />
                 <item
-                    android:color="#293D66"
+                    android:color="#283C64"
                     android:offset="1.0" />
             </gradient>
         </aapt:attr>
