--- a/app/src/main/res/layout/fragment_settings_brightness_card.xml
+++ b/app/src/main/res/layout/fragment_settings_brightness_card.xml
@@ -39,8 +39,8 @@
         android:layout_marginRight="48dp"
         android:gravity="center"
         android:text="@string/settings_brightness"
-        android:textColor="@color/grayscale_15"
-        android:textSize="24sp"
+        android:textColor="@color/main_color"
+        android:textSize="@dimen/text_size_title"
         app:layout_constraintEnd_toEndOf="@+id/settings_brightness_card_top_shader"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
