--- a/app/src/main/res/layout/fragment_settings_night_main.xml
+++ b/app/src/main/res/layout/fragment_settings_night_main.xml
@@ -35,7 +35,8 @@
                     android:layout_marginStart="12dp"
                     android:layout_marginLeft="12dp"
                     android:text="Enable when at"
-                    android:textSize="20sp"
+                    android:textColor="@color/main_color"
+                    android:textSize="@dimen/text_size_normal"
                     app:layout_constraintBottom_toTopOf="@+id/settings_night_main_enable_brightness_seekbar"
                     app:layout_constraintEnd_toStartOf="@+id/settings_night_main_enable_brightness_value"
                     app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +49,8 @@
                     android:layout_marginEnd="12dp"
                     android:layout_marginRight="12dp"
                     android:text="0 lx"
-                    android:textSize="20sp"
+                    android:textColor="@color/main_color"
+                    android:textSize="@dimen/text_size_normal"
                     app:layout_constraintBottom_toTopOf="@+id/settings_night_main_enable_brightness_seekbar"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/settings_night_main_enable_brightness_title"
@@ -70,6 +72,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
                     android:layout_marginLeft="12dp"
+                    android:textColor="@color/sub_color"
+                    android:textSize="@dimen/text_size_tiny"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/settings_night_main_enable_brightness_seekbar" />
@@ -80,6 +84,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
                     android:layout_marginRight="12dp"
+                    android:textColor="@color/sub_color"
+                    android:textSize="@dimen/text_size_tiny"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/settings_night_main_enable_brightness_seekbar" />
@@ -103,7 +109,8 @@
                     android:layout_marginStart="12dp"
                     android:layout_marginLeft="12dp"
                     android:text="Disable when at"
-                    android:textSize="20sp"
+                    android:textColor="@color/main_color"
+                    android:textSize="@dimen/text_size_normal"
                     app:layout_constraintBottom_toTopOf="@+id/settings_night_main_disableable_brightness_seekbar"
                     app:layout_constraintEnd_toStartOf="@+id/settings_night_main_disableable_brightness_value"
                     app:layout_constraintStart_toStartOf="parent"
@@ -116,7 +123,8 @@
                     android:layout_marginEnd="12dp"
                     android:layout_marginRight="12dp"
                     android:text="0 lx"
-                    android:textSize="20sp"
+                    android:textColor="@color/main_color"
+                    android:textSize="@dimen/text_size_normal"
                     app:layout_constraintBottom_toTopOf="@+id/settings_night_main_disableable_brightness_seekbar"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/settings_night_main_disableable_brightness_title"
@@ -138,6 +146,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
                     android:layout_marginLeft="12dp"
+                    android:textColor="@color/sub_color"
+                    android:textSize="@dimen/text_size_tiny"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/settings_night_main_disableable_brightness_seekbar" />
@@ -148,6 +158,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
                     android:layout_marginRight="12dp"
+                    android:textColor="@color/sub_color"
+                    android:textSize="@dimen/text_size_tiny"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/settings_night_main_disableable_brightness_seekbar" />
