--- a/app/src/main/res/layout/fragment_settings_performance_main.xml
+++ b/app/src/main/res/layout/fragment_settings_performance_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/settings_performance_main_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
@@ -12,8 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/transparent"
-        app:tabIndicatorColor="@color/grayscale_15"
-        app:tabSelectedTextColor="@color/grayscale_15">
+        app:tabIndicatorColor="@color/highlight_color"
+        app:tabSelectedTextColor="@color/main_color"
+        app:tabTextColor="@color/sub_color">
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/settings_performance_main_tab_image_quality"
@@ -48,7 +49,8 @@
                     android:layout_marginStart="12dp"
                     android:layout_marginLeft="12dp"
                     android:text="@string/settings_performance_quality_level"
-                    android:textSize="20sp"
+                    android:textColor="@color/main_color"
+                    android:textSize="@dimen/text_size_normal"
                     app:layout_constraintBottom_toTopOf="@+id/settings_performance_main_image_quality_seekbar"
                     app:layout_constraintEnd_toStartOf="@+id/settings_performance_main_image_quality_value"
                     app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +63,8 @@
                     android:layout_marginEnd="12dp"
                     android:layout_marginRight="12dp"
                     android:text="0"
-                    android:textSize="20sp"
+                    android:textColor="@color/main_color"
+                    android:textSize="@dimen/text_size_normal"
                     app:layout_constraintBottom_toTopOf="@+id/settings_performance_main_image_quality_seekbar"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/settings_performance_main_image_quality_title"
@@ -72,6 +75,7 @@
                     style="@style/Widget.AppCompat.SeekBar.Discrete"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:hapticFeedbackEnabled="true"
                     android:max="3"
                     android:paddingLeft="12dp"
                     android:paddingRight="12dp"
@@ -86,6 +90,8 @@
                     android:layout_marginStart="12dp"
                     android:layout_marginLeft="12dp"
                     android:text="@string/settings_performance_image_quality_level_low"
+                    android:textColor="@color/sub_color"
+                    android:textSize="@dimen/text_size_tiny"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/settings_performance_main_image_quality_seekbar" />
 
@@ -96,6 +102,8 @@
                     android:layout_marginEnd="12dp"
                     android:layout_marginRight="12dp"
                     android:text="@string/settings_performance_image_quality_level_high"
+                    android:textColor="@color/sub_color"
+                    android:textSize="@dimen/text_size_tiny"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/settings_performance_main_image_quality_seekbar" />
 
