--- a/app/src/main/res/layout/fragment_settings_sensitivity_main.xml
+++ b/app/src/main/res/layout/fragment_settings_sensitivity_main.xml
@@ -4,7 +4,8 @@
     android:id="@+id/settings_sensitivity_main_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:scrollbarThumbHorizontal="@color/transparent">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/settings_sensitivity_main_tab_container"
@@ -14,8 +15,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tabIndicatorColor="@color/grayscale_15"
-        app:tabSelectedTextColor="@color/grayscale_15">
+        app:tabIndicatorColor="@color/highlight_color"
+        app:tabSelectedTextColor="@color/main_color"
+        app:tabTextColor="@color/sub_color">
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/settings_sensitivity_main_tab_pulldown"
@@ -34,6 +36,6 @@
             android:id="@+id/settings_sensitivity_main_scroll_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"></LinearLayout>
+            android:orientation="vertical"/>
     </ScrollView>
 </LinearLayout>
